<?xml version="1.0"?>
<package format="3">
  <name>ltm2985_uart</name>
  <version>0.1.0</version>
  <description>ROS 2 UART reader for JSON frames produced by the Arduino LTM2985 firmware.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
